features/common.workflow-approvals.v1/components/approval-task.scss
/**
 * Copyright (c) 2025, WSO2 LLC. (https://www.wso2.com).
 *
 * WSO2 LLC. licenses this file to you under the Apache License,
 * Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

.approval-task-properties {
    &-container {
        max-width: 100%;
        overflow-x: auto;
    }

    &-table {
        table-layout: fixed;
        width: 100%;

        .key-cell {
            width: 30%;
            word-break: break-word;
        }

        .values-cell {
            width: 70% !important;
            word-break: break-word;
            overflow-wrap: anywhere;
        }
    }
}

